tests/fail/fail-print.mc
/* Should be illegal to redefine */
void print() {}
